--- a/teachdentistry/templates/base_teachdentistry.html
+++ b/teachdentistry/templates/base_teachdentistry.html
@@ -84,6 +84,7 @@
                     <div class="active item"><img src="/site_media/img/slideshow_01.jpg" /></div>
                     <div class="item"><img src="/site_media/img/slideshow_02.jpg" /></div>
                     <div class="item"><img src="/site_media/img/slideshow_03.jpg" /></div>
+                    <div class="item"><img src="/site_media/img/slideshow_04.jpg" /></div>
                 </div>
             </div>
             <div class="text-content" id="phrase1">
