CSS for content pages

--- a/teachdentistry/templates/main/page.html
+++ b/teachdentistry/templates/main/page.html
@@ -39,7 +39,7 @@
 {% endblock breadcrumbs %}
 
 {% block section_thumbnail %}
-<div class="section-thumbnail"><div class="section-slug thumbnail-{{module.slug}}"></div><h3 style="float: left;">SECTION: {{module.slug|upper}}</h3></div>
+<div class="section-thumbnail"><div class="section-slug thumbnail-{{module.slug}}"></div><h3>SECTION: {{module.slug|upper}}</h3></div>
 {% endblock %}
 
 {% block content %}
