--- a/media/css/main.css
+++ b/media/css/main.css
@@ -55,8 +55,10 @@ body > .container {
 } */
 
 .pagetitle {
-    margin-top: 0;
-    padding-top: 30px;
+    margin: 0;
+    padding: 10px 0 50px 0;
+    font-weight: normal;
+    font-size: 40px;
 }
 
 .visualclear {
@@ -468,11 +470,19 @@ h2.tab-header {
     height: 40px;
 }
 
-.section-slug {
+.section-thumbnail .section-slug {
     margin: 0 10px 0 0;
     width: 40px;
     height: 40px;
     float: left;
+}
+
+.section-thumbnail h3 {
+    font-weight: normal;
+    font-size: 20px;
+    float: left;
+    padding: 0;
+    margin: 0;
 }
 
 .section-icon-home {
@@ -1031,7 +1041,7 @@ h2.tab-header {
 .self-id-quiz .question_intro_text {
     margin: 0 0 0 0;
     padding: 0 0 10px 0;
-    font-size: 36px;
+    font-size: 30px;
     color: #06c;
     font-weight: normal;
 }
@@ -1067,12 +1077,80 @@ h2.tab-header {
 .self-id-quiz .selection-block h3 {
     margin: 0;
     padding: 0;
-    font-size: 24px;
+    font-size: 20px;
     color: #666;
     font-weight: normal;
 }
 
 .self-id-quiz .highlighted h3 {
     color: #06c;
+}
+
+
+
+
+
+/* pager navigation */
+
+.content-nav
+{
+	margin: 50px 0;
+	padding: 5px 0;
+	border: 0;
+	border-top: 1px dotted #6699cc;
+	border-bottom: 1px dotted #6699cc;
+	font-size: 12px;
+}
+
+.content-nav a#previous
+{
+	display: block;
+	float: left;
+	width: auto;
+}
+
+.content-nav a#next, a#next, #next
+{
+	display: block;
+	float: right;
+	width: auto;
+	text-align: right;
+}
+
+.content-nav div#next
+{
+	display: block;
+	float: right;
+	width: auto;
+	text-align: right;
+}
+
+
+.content-nav a.pager_button,
+.content-nav div.pager_button
+{
+  padding: 5px 14px;
+  background-color: #fff;
+  border: 1px solid transparent;
+  -webkit-border-radius: 15px;
+     -moz-border-radius: 15px;
+          border-radius: 15px;
+}
+
+.content-nav div.pager_button {
+    color: #999 !important;
+}
+
+
+.content-nav a.pager_button:hover {
+  text-decoration: none;
+  background-color: #efefef;
+  color: #006666  !important;
+}
+
+
+.content-nav div.pager_button:hover {
+  text-decoration: none;
+  background-color: #efefef;
 }
 
