--- a/media/css/main.css
+++ b/media/css/main.css
@@ -99,7 +99,10 @@ body > .container {
 div.map-container div.search {
     float: left;
     width: 30%;
-    font-size: .9em;
+}
+
+div.map-container div.search .accordion-heading {
+    background-color: #efefef;
 }
 
 div.map-container div.search .accordion-body {
@@ -149,13 +152,45 @@ div.map-container div.map {
     width: 100%;
 }
 
-div.educator-name {
-    color: red;
-    font-weight: bold;
-    font-size: 24px;    
+.map-container h4 {
+    margin: 0;
+    padding: 30px 0 10px;
+    border: 0;
+    font-weight: normal;
+    font-size: 18px;
 }
 
+div.educator-infowindow {
+    margin-top: 20px;
+}
+
+div.educator-infowindow div.educator-headshot {
+    float: left;
+}
+
+div.educator-infowindow div.educator-info {
+    width: auto;
+    margin-left: 95px;
+}
+
+div.educator-info div.educator-name {
+    font-weight: bold;
+    font-size: 14px; 
+    line-height: 120%;
+    margin-bottom: 10px;
+}
+
+
 div.educator-bio-summary {
+    font-size: 12px; 
+    line-height: 120%;
+    line-height: 120%;
+    margin-bottom: 10px;
+}
+
+
+div.educator-infowindow .headshot-thumb {
+    width: 75px;
 }
 
 
@@ -1099,7 +1134,7 @@ h2.tab-header {
 	border: 0;
 	border-top: 1px dotted #6699cc;
 	border-bottom: 1px dotted #6699cc;
-	font-size: 12px;
+	font-size: 16px;
 }
 
 .content-nav a#previous
@@ -1131,7 +1166,7 @@ h2.tab-header {
 {
   padding: 5px 14px;
   background-color: #fff;
-  border: 1px solid transparent;
+  border: 1px solid #e0e0e0;
   -webkit-border-radius: 15px;
      -moz-border-radius: 15px;
           border-radius: 15px;
